feat(instances): configurable unknown_sni_action incl. reject_handshake (S3 of task 010)
